# Kanterita-3

./: .gitignore  README.md
kanterita3/: .env  Cargo.toml  database.sql  docker-compose.yaml
kanterita3/src/: config.rs  db.rs  file_handler.rs  handlers.rs  main.rs  models.rs
