[package]
name = "kanterita3"
version = "0.1.0"
authors = ["God-Zalo <martinez.zalocin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
serde = { version = "1.0.123", features = ["derive"]}
