[package]
name = "kanterita3"
version = "0.1.0"
authors = ["God-Zalo <martinez.zalocin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
actix-multipart = "0.3"
sanitize-filename = "0.2"
futures = "0.3.1"
serde = { version = "1.0.123", features = ["derive"]}
serde_json = "1.0.61"
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"
deadpool-postgres = "0.5.0"
tokio-postgres = "0.5.1"
